Unreleased

Added
    Allow setting container settings when creating them (#57)
    Copy profiles between hosts (#94)
    Choose host to restore container snapshot to (#96)
    Delete host (#99)
    Reload server dashboard after finishing creating a container (#97)

Changed
    Redirect by default to https (#86)
    Spelling of "Stoping" (#95)

0.3.0

Fixed
    Fix ui doesn't load when server is offline (#77)
    Cant view projects page if one host doesn't have projects endpoint (#76)
    Show host on container information (#80)
    Finding os version for a container (#79)
    The spelling of storage (#81)
    Curl bug with centos7 (#84)
    UI broken when host offline (#83)

Added
    Store total storage usage for fleet analytics (#75)
    Support for CentOS7 (#84)
    Basic network management (#4)