@@ -464,7 +464,7 @@ if(typeof io !== "undefined"){
        let description = msg.metadata.hasOwnProperty("description") ? msg.metadata.description : "No Description Available";
        let host = msg.host;
        let hostList = $("#operationsList").find(`[data-host='${host}']`);
-       
+
        if(msg.metadata.description == "Creating container" && msg.metadata.status_code == 200 && $("#mainBreadcrumb").find(".active").text()){
           loadServerOview();
        }
